# image-activity

./: .gitattributes  .gitignore  README.md  activity.py  classify.ipynb  config.example.yaml  plots.py  pyproject.toml
bruki/: samples.py
bruki/server/: README.md  api.py  app.js  index.html  ml.py  style.css
docs/: contributing.md  explore.md  features.md  roadmap.md  tagger.md
docs/social/: preview.html  preview.py
image_activity/: activity.py  plots.py
ml/: classify.ipynb  ocr.py  samples.py
ml/classify/: text.py
notebooks/: README.md  classify.ipynb  clusters.ipynb  ocr.ipynb
www/: README.md  api.py  app.js  app.py  index.html  ml.py  style.css
